# anime-tui

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: commands.rs  config.rs  launcher.rs  mod.rs  models.rs
src/tui/: app.rs  handlers.rs  mod.rs  theme.rs
