[package]
name = "anime-term-tool"
version = "0.1.0"
edition = "2021"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }

[profile.release]
strip = true
opt-level = "z"
lto = true
